[project]
name = "cyclehire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataframely>=2.9.1",
    "fastexcel>=0.20.1",
    "fastapi>=0.115.0",
    "polars>=1.40.1",
    "typer>=0.15.0",
    "uvicorn>=0.32.0",
]

[project.scripts]
cyclehire = "cyclehire.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/cyclehire"]
